[beab73d45e328a8f00e8946f095f3faf4d2ec967]: Updated '_i18n/pt/_posts/webservice/2015-03-25-webservice-1.5.md' via CloudCannon

--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -1113,6 +1113,10 @@ mensagem=<span class="cp">&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;</spa
 
 <aside class="warning">O indicador ECI é muito importante, pois é ele que determina as regras de Chargeback.</aside>
 
+<blockquote>
+  <p>A transação autenticada passa por uma validação do emissor e da bandeira, em momento de autorização, podendo refletir na alteração do ECI (Eletronic Commerce Indicator), que é utilizado para determinar quem será o responsável em caso de chargeback nas modalidades fraude.</p>
+</blockquote>
+
 <h1 id="catálogo-de-códigos-de-resposta">Catálogo de códigos de resposta</h1>
 
 <h2 id="códigos-de-autorização-lr">Códigos de Autorização LR</h2>
