[5a5d5b1b5f2023d1aaa99ec4a268c053fc1a2882]: Updated '_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md' via CloudCannon

--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -330,9 +330,15 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 
 <h3 id="api-cielo-ecommerce-1">Api Cielo Ecommerce</h3>
 
+<h4 id="collection">Collection</h4>
+
 <ul>
-  <li><strong>Collection</strong> -  https://www.getpostman.com/collections/139520c8fe2210654d7c</li>
+  <li><strong>Link de importação</strong></li>
 </ul>
+
+<blockquote>
+  <p>https://www.getpostman.com/collections/139520c8fe2210654d7c</p>
+</blockquote>
 
 <table>
   <thead>
@@ -353,11 +359,26 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
   </tbody>
 </table>
 
-<h3 id="checkout-cielo-1">Checkout Cielo</h3>
+<h4 id="environment">Environment</h4>
+
+<p>Faça download dos arquivos abaixo e subistitua os MerchantIDs e MerchantKeys pelos os da sua Loja.</p>
 
 <ul>
-  <li><strong>Collection</strong>  - https://www.getpostman.com/collections/97969ec643738aac42f4</li>
+  <li><a href="http://maroon-cavern.cloudvent.net/attachment/postman/3.0 - Produção - Manual.postman_environment.json"><strong>Environment Produção</strong></a></li>
+  <li><a href="http://maroon-cavern.cloudvent.net/attachment/postman/3.0 - Sandbox - Manual.postman_environment.json"><strong>Environment Sandbox</strong></a></li>
 </ul>
+
+<h3 id="checkout-cielo-1">Checkout Cielo</h3>
+
+<h4 id="collection-1"><strong>Collection</strong></h4>
+
+<ul>
+  <li><strong>Link de importação</strong></li>
+</ul>
+
+<blockquote>
+  <p>https://www.getpostman.com/collections/97969ec643738aac42f4</p>
+</blockquote>
 
 <table>
   <thead>
@@ -373,6 +394,14 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
     </tr>
   </tbody>
 </table>
+
+<h4 id="environment-1">Environment</h4>
+
+<p>Faça download do arquivo abaixo e subistitua o MerchantID pelo o da sua Loja.</p>
+
+<ul>
+  <li><a href="http://maroon-cavern.cloudvent.net/attachment/postman/Checkout - Produção - Manual.postman_environment.json"><strong>Environment Produção</strong></a></li>
+</ul>
 
 </div>
 
