--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -363,10 +363,9 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 
 <p>Faça download dos arquivos abaixo e subistitua os MerchantIDs e MerchantKeys pelos os da sua Loja.</p>
 
-<ul>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/postman/3.0 - Produção - Manual.postman_environment.json"><strong>Environment Produção</strong></a></li>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/postman/3.0 - Sandbox - Manual.postman_environment.json"><strong>Environment Sandbox</strong></a></li>
-</ul>
+<blockquote>
+  <p><a href="http://maroon-cavern.cloudvent.net/attachment/postman/apicielo.rar"><strong>Environment Produção e Sandbox</strong></a></p>
+</blockquote>
 
 <h3 id="checkout-cielo-1">Checkout Cielo</h3>
 
@@ -399,9 +398,9 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 
 <p>Faça download do arquivo abaixo e subistitua o MerchantID pelo o da sua Loja.</p>
 
-<ul>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/postman/Checkout - Produção - Manual.postman_environment.json"><strong>Environment Produção</strong></a></li>
-</ul>
+<blockquote>
+  <p><a href="http://maroon-cavern.cloudvent.net/attachment/postman/checkout.rar"><strong>Environment Produção</strong></a></p>
+</blockquote>
 
 </div>
 
