[c39d11b72f5873567864c4391a2714b5f4c5da50]: Updated '_i18n/pt/_posts/documentos-adicionais/2017-07-26-postman.md' via CloudCannon

--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -364,7 +364,7 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 <p>Faça download dos arquivos abaixo e subistitua os MerchantIDs e MerchantKeys pelos os da sua Loja.</p>
 
 <blockquote>
-  <p><a href="http://maroon-cavern.cloudvent.net/attachment/postman/apicielo.rar"><strong>Environment Produção e Sandbox</strong></a></p>
+  <p><a href="https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/attachment/postman/apicielo.rar"><strong>Environment Produção e Sandbox</strong></a></p>
 </blockquote>
 
 <h3 id="checkout-cielo-1">Checkout Cielo</h3>
@@ -399,7 +399,7 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 <p>Faça download do arquivo abaixo e subistitua o MerchantID pelo o da sua Loja.</p>
 
 <blockquote>
-  <p><a href="http://maroon-cavern.cloudvent.net/attachment/postman/checkout.rar"><strong>Environment Produção</strong></a></p>
+  <p><a href="https://github.com/DeveloperCielo/developercielo.github.io/blob/docs/attachment/postman/checkout.rar"><strong>Environment Produção</strong></a></p>
 </blockquote>
 
 </div>
