[02fc6f90c3f7dd5c2c573268a72ecea8a9d349d8]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -10799,7 +10799,7 @@ O Submergível pode usar a consulta bins no carrinho para alertar compradores in
 
 <p>Basta realizar um <code class="highlighter-rouge">GET</code> enviado o BIN a nossa URL de consulta:</p>
 
-<aside class="request"><span class="method get">GET</span><span class="endpoint">https://`apiquerysandbox`.cieloecommerce.cielo.com.br/1/cardBin/`BIN`</span></aside>
+<aside class="request"><span class="method get">GET</span><span class="endpoint">/1/cardBin/`BIN`</span></aside>
 
 <table>
   <thead>
