[bb6330610932387c8ba9addba54a30a2a38d6bd7]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -10759,6 +10759,8 @@ O serviço retornar os seguintes dados sobre o cartão:</p>
 
 <p>Essas informações permitem tomar ações no momento do checkout para melhorar a conversão da loja.</p>
 
+<aside class="warning">O Consulta Bin deve ser habilitado pelo Suporte Cielo. Entre em contato com a equipe de Suporte e solicite a habilitação para sua loja.</aside>
+
 <h2 id="caso-de-uso-2">Caso de Uso</h2>
 
 <p>Veja um exemplo de uso: <strong>Consulta Bins + recuperação de carrinho</strong></p>
