[f00feb188f3dabdd5f94b3b5a74977f652ab6fa2]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -4404,6 +4404,8 @@ Abaixo especificamos qualquer diferença existente:</p>
   </tbody>
 </table>
 
+<aside class="warning">O Cancelamento de transações de boleto ocorrem apenas via Backoffice. Não há cancelamento via API disponivel.</aside>
+
 <h2 id="erros-de-integração">Erros de Integração</h2>
 
 <p>Caso ocorram erros de integração em qualquer um dos meios de pagamento, um “response” será retornado contendo um código de erro e uma descrição</p>
