[9145436b43117b823d94d2877bd95fb3ea273618]: Updated '_i18n/pt/_posts/checkout-cielo/2000-01-01-checkout-cielo.md' via CloudCannon

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -2118,7 +2118,7 @@ Esse meio de pagamento precisa ser cadastrado pelo Suporte Cielo para que seja d
 <table>
   <thead>
     <tr>
-      <th>Mastercard</th>
+      <th>Bancos</th>
     </tr>
   </thead>
   <tbody>
