[80d8013e293e723a686ca5fdcb34a38173e370d1]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -883,7 +883,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -1480,7 +1480,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -1893,7 +1893,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -2569,7 +2569,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
@@ -4721,7 +4721,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -9857,7 +9857,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
   </tbody>
@@ -11447,7 +11447,7 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
       <td>Texto</td>
       <td>10</td>
-      <td>Não</td>
+      <td>Sim</td>
       <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
     </tr>
     <tr>
