[440465cacc934b0ff88d2fb5ebfe967580e4550e]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -137,27 +137,46 @@
 
 <p>Nesse manual você encontrará a referência sobre todas as operações disponíveis na API REST da API Cielo eCommerce. Estas operações devem ser executadas utilizando sua chave específica (Merchant ID e Merchant Key) nos respectivos endpoints dos ambientes:</p>
 
-<p>Ambiente Produção</p>
-
-<ul>
-  <li><strong>Requisição de transação</strong>: https://api.cieloecommerce.cielo.com.br/</li>
-  <li><strong>Consulta transação</strong>: https://apiquery.cieloecommerce.cielo.com.br/</li>
-</ul>
-
-<p>Ambiente Sandbox</p>
-
-<ul>
-  <li><strong>Requisição de transação</strong>: https://apisandbox.cieloecommerce.cielo.com.br</li>
-  <li><strong>Consulta transação</strong>: https://apiquerysandbox.cieloecommerce.cielo.com.br</li>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th> </th>
+      <th>SandBox</th>
+      <th>Produção</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>Requisição de transação</strong></td>
+      <td>https://apisandbox.cieloecommerce.cielo.com.br</td>
+      <td>https://api.cieloecommerce.cielo.com.br/</td>
+    </tr>
+    <tr>
+      <td><strong>Consultas</strong></td>
+      <td>https://apiquerysandbox.cieloecommerce.cielo.com.br</td>
+      <td>https://apiquery.cieloecommerce.cielo.com.br/</td>
+    </tr>
+  </tbody>
+</table>
 
 <p>Para executar uma operação, combine a URL base do ambiente com a URL da operação desejada e envie utilizando o verbo HTTP conforme descrito na operação.</p>
 
 <h2 id="características-da-solução">Características da solução</h2>
 
-<p>A solução API Cielo eCommerce da plataforma Cielo eCommerce foi desenvolvida com a tecnologia REST, que é padrão de mercado e independe da tecnologia utilizada por nossos clientes. Dessa forma, é possível integrar-se utilizando as mais variadas linguagens de programação, tais como: ASP, ASP. Net, Java, PHP, Ruby, Python, etc.</p>
+<p>A solução API Cielo eCommerce da plataforma Cielo eCommerce foi desenvolvida com a tecnologia REST, que é padrão de mercado e independe da tecnologia utilizada por nossos clientes. Dessa forma, é possível integrar-se utilizando as mais variadas linguagens de programação, tais como:</p>
 
-<p>Para Obter exemplos dessas linguagens, veja nosso tutorial de conversao via nosso <a href="https://developercielo.github.io/tutorial/postman"><strong>Tutorial Postman</strong></a></p>
+<ul>
+  <li>ASP</li>
+  <li>Net</li>
+  <li>Java</li>
+  <li>PHP</li>
+  <li>Ruby</li>
+  <li>Python</li>
+</ul>
+
+<blockquote>
+  <p>Para Obter exemplos dessas linguagens, veja nosso tutorial de conversao via nosso <a href="https://developercielo.github.io/tutorial/postman"><strong>Tutorial Postman</strong></a></p>
+</blockquote>
 
 <p>Entre outras características, os atributos que mais se destacam na plataforma Cielo eCommerce:</p>
 
