[56efd1c2867a7ac6168aa1fc5a19abd7f0ae7b2b]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -12493,9 +12493,8 @@ A Wallet MasterPass não possui <code class="highlighter-rouge">WalletKey</code>
 
 <h2 id="sobre-os-códigos">Sobre os códigos</h2>
 
-<p>A Api Cielo e-commerce possui 4 tipos de códigos retornados que representam diferentes momentos da transação.</p>
-
-<p>Abaixo vamos explica-los na ordem em que podem ocorrem:</p>
+<p>A Api Cielo e-commerce possui 4 tipos de códigos retornados que representam diferentes momentos da transação.
+Abaixo vamos explica-los na ordem em que podem ocorrer:</p>
 
 <table>
   <thead>
@@ -12524,7 +12523,9 @@ A Wallet MasterPass não possui <code class="highlighter-rouge">WalletKey</code>
   </tbody>
 </table>
 
-<p><strong>OBS</strong>: No  antigo <strong>Webservice 1.5 Cielo</strong>, o <code class="highlighter-rouge">ReturnCode</code> era considerado como <em>Status da transação</em>. Na <strong>API CIELO ECOMMERCE</strong>, o campo <code class="highlighter-rouge">Status</code> possui códigos próprios, sendo assim, o <strong>campo a ser considerado como base de identificação do status de uma transação</strong></p>
+<blockquote>
+  <p><strong>OBS</strong>: No  antigo <strong>Webservice 1.5 Cielo</strong>, o <code class="highlighter-rouge">ReturnCode</code> era considerado como <em>Status da transação</em>. Na <strong>API CIELO ECOMMERCE</strong>, o campo <code class="highlighter-rouge">Status</code> possui códigos próprios, sendo assim, o <strong>campo a ser considerado como base de identificação do status de uma transação</strong></p>
+</blockquote>
 
 <h2 id="http-status-code">HTTP Status Code</h2>
 
