[eb060703335858bb6808340221759130250fdb06]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14170,17 +14170,21 @@ Eles indicam, por exemplo, se uma transação com <code class="highlighter-rouge
   <thead>
     <tr>
       <th>Cenário</th>
+      <th>Efeito</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>Recorrência</td>
+      <td>Se não for habilitado, recorrências serão automaticamente <strong>não autorizadas</strong></td>
     </tr>
     <tr>
       <td>Transação sem CVV</td>
+      <td>Se não for habilitado, vendas sem CVV serão automaticamente <strong>não autorizadas</strong></td>
     </tr>
     <tr>
       <td>Personalização da validade de uma transação</td>
+      <td>Por padrão <strong>15 dias</strong> -  Após esse periodo, transações não capturadas <strong>são perdidas</strong></td>
     </tr>
   </tbody>
 </table>
