[caab18dcce2a4c9a906fad03536d0af1eb51f36b]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -3386,21 +3386,21 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
   <thead>
     <tr>
       <th>Bandeira</th>
-      <th>Banco</th>
+      <th>Bancos</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>Visa</td>
-      <td>Bradesco</td>
+      <td>Bradesco / Banco do Brasil</td>
     </tr>
     <tr>
       <td>MasterCard</td>
-      <td>Santander</td>
+      <td>Santander / Banco do Brasil</td>
     </tr>
     <tr>
       <td>Elo</td>
-      <td>Banco do Brasil</td>
+      <td>Bradesco / Banco do Brasil</td>
     </tr>
   </tbody>
 </table>
