[8ea13557454b78ea64b571edefc0b8ed26f3bc8d]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -11922,7 +11922,7 @@ VKeU<br />
       <td>Texto</td>
       <td>255</td>
       <td>Sim</td>
-      <td>indica qual o tipo de carteira: <code class="highlighter-rouge">ApplePay</code> / <code class="highlighter-rouge">SamsungPay</code> / <code class="highlighter-rouge">AndroidPay</code> / <code class="highlighter-rouge">VisaCheckout</code>/ <code class="highlighter-rouge">Masterpass</code></td>
+      <td>indica qual o tipo de carteira: <code class="highlighter-rouge">ApplePay</code> / <code class="highlighter-rouge">VisaCheckout</code>/ <code class="highlighter-rouge">Masterpass</code></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Walletkey</code></td>
@@ -11936,7 +11936,7 @@ VKeU<br />
       <td>Texto</td>
       <td>255</td>
       <td>Sim</td>
-      <td>Token retornado pela Wallet. Deve ser enviado em Integrações: <code class="highlighter-rouge">ApplePay</code>/ <code class="highlighter-rouge">AndroidPay</code></td>
+      <td>Token retornado pela Wallet. Deve ser enviado em Integrações: <code class="highlighter-rouge">ApplePay</code></td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.AdditionalData.capturecode</code></td>
@@ -12088,7 +12088,7 @@ VKeU<br />
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Type</code></td>
-      <td>indica qual o tipo de carteira: <code class="highlighter-rouge">ApplePay</code> / <code class="highlighter-rouge">SamsungPay</code> / <code class="highlighter-rouge">AndroidPay</code> / <code class="highlighter-rouge">VisaCheckout</code>/ <code class="highlighter-rouge">Masterpass</code></td>
+      <td>indica qual o tipo de carteira: <code class="highlighter-rouge">ApplePay</code> / <code class="highlighter-rouge">VisaCheckout</code>/ <code class="highlighter-rouge">Masterpass</code></td>
       <td>Texto</td>
       <td>255</td>
       <td>Texto alfanumérico</td>
