[cbf81f5e25c88d7581d5be4f706af4bf41c53e61]: Updated '_i18n/pt/_posts/checkout-cielo/2000-01-01-checkout-cielo.md' via CloudCannon

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -134,7 +134,7 @@ A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo
 
 <p>O grande diferencial do Checkout Cielo é a gama de serviços agregados em uma tela transacional segura e com apenas uma integração técnica via <strong>API REST</strong>.</p>
 
-<p>O Checkout possui as seguintes Funcionalidades:</p>
+<p>O <em>Checkout</em> possui as seguintes Funcionalidades:</p>
 
 <table>
   <thead>
