[d0fb0524fdf38d919f8d85ea67f2126cec5e0613]: Updated '_i18n/pt/_posts/checkout-cielo/2000-01-01-checkout-cielo.md' via CloudCannon

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -3295,7 +3295,7 @@ Se no contrato técnico existir o nó da recorrência, fica obrigatório o tipo 
     <tr>
       <td style="text-align: center"><a href="https://vaidevisa.visa.com.br/site/visa-checkout"><strong>VisaCheckout</strong></a></td>
       <td>Wallet da bandeira Visa, permite que o comprador salve cartões e endereços e os utilize no Checkout</td>
-      <td>Necessita que o lojista solicite ativação pela Cielo</td>
+      <td>Necessita que o lojista solicite ativação pela <a href="https://developercielo.github.io/manual/checkout-cielo#suporte-cielo"><strong>Cielo</strong></a></td>
     </tr>
     <tr>
       <td style="text-align: center"><a href="https://cieloecommerce.cielo.com.br/backoffice"><strong>Compre Rápido by Cielo</strong></a></td>
