[aa562669009903a2cd8a0794351a921774912d46]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14296,6 +14296,13 @@ Eles indicam, por exemplo, se uma transação com <code class="highlighter-rouge
       <td>Não</td>
     </tr>
     <tr>
+      <td>09</td>
+      <td>Transação cancelada parcialmente com sucesso.</td>
+      <td>Transação cancelada parcialmente com sucesso</td>
+      <td>Transação cancelada parcialmente com sucesso</td>
+      <td>Não</td>
+    </tr>
+    <tr>
       <td>11</td>
       <td>Transação autorizada com sucesso para cartão emitido no exterior</td>
       <td>Transação autorizada com sucesso.</td>
