[7598cc6b30efc0ed393f4e2e64232cae06fbc8ac]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -450,7 +450,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
   <li><a href="https://developercielo.github.io/attachment/Root.crt">Certificado Raiz</a></li>
   <li><a href="https://developercielo.github.io/attachment/Intermediate1.crt">Certificado Intermediária 1</a></li>
   <li><a href="https://developercielo.github.io/attachment/Intermediate2.crt">Certificado Intermediária 2</a></li>
-  <li><a href="https://developercielo.github.io/attachment/ServerCertificate.cer">Certificado E-Commerce Cielo</a></li>
+  <li><a href="https://developercielo.github.io/attachment/ServerCertificate.crt">Certificado E-Commerce Cielo</a></li>
 </ul>
 
 <h2 id="passo-a-passo-para-a-instalação">Passo a Passo para a Instalação</h2>
@@ -473,7 +473,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
   <li><a href="https://developercielo.github.io/attachment/Root.crt">Certificado Raiz</a></li>
   <li><a href="https://developercielo.github.io/attachment/Intermediate1.crt">Certificado Intermediária 1</a></li>
   <li><a href="https://developercielo.github.io/attachment/Intermediate2.crt">Certificado Intermediária 2</a></li>
-  <li><a href="https://developercielo.github.io/attachment/ServerCertificate.cer">Certificado E-Commerce Cielo</a></li>
+  <li><a href="https://developercielo.github.io/attachment/ServerCertificate.crt">Certificado E-Commerce Cielo</a></li>
 </ul>
 
 <p><strong>2º Passo</strong></p>
