--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -466,7 +466,7 @@
 <ul>
   <li><a href="http://maroon-cavern.cloudvent.net/attachment/Root.crt">Certificado Raiz</a></li>
   <li><a href="http://maroon-cavern.cloudvent.net/attachment/Intermediate1.crt">Certificado Intermediária</a></li>
-  <li><a href="http://maroon-cavern.cloudvent.net/attachment/Intermediate2.cer">Certificado E-Commerce Cielo</a></li>
+  <li><a href="http://maroon-cavern.cloudvent.net/attachment/Intermediate2.crt">Certificado E-Commerce Cielo</a></li>
 </ul>
 
 <p><strong>2o Passo:</strong></p>
