[590c59608f7a0883ca0e45e2388a41c0aa54e907]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -5426,7 +5426,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Intervalo entre as recorrência.</td>
       <td>Texto</td>
       <td>10</td>
-      <td>MonthlyBimonthly Quarterly SemiAnnual Annual</td>
+      <td>/ Monthly / Bimonthly  / Quarterly  / SemiAnnual / Annual</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CurrentRecurrencyTry </code></td>
@@ -7590,7 +7590,7 @@ Nesse modelo, o sistema do lojista é encarregado por definir o período, os dad
       <td>Intervalo entre as recorrência.</td>
       <td>Texto</td>
       <td>10</td>
-      <td>MonthlyBimonthly Quarterly SemiAnnual Annual</td>
+      <td>/ Monthly / Bimonthly  / Quarterly  / SemiAnnual / Annual</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">AuthorizeNow</code></td>
@@ -7999,7 +7999,7 @@ Nesse modelo, o sistema do lojista é encarregado por definir o período, os dad
       <td>Intervalo entre as recorrência.</td>
       <td>Texto</td>
       <td>10</td>
-      <td>MonthlyBimonthly Quarterly SemiAnnual Annual</td>
+      <td>/ Monthly / Bimonthly  / Quarterly  / SemiAnnual / Annual</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">AuthorizeNow</code></td>
@@ -8437,7 +8437,7 @@ HTTP Status 200
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Interval</code></td>
-      <td>Intervalo da recorrência. MonthlyBimonthly Quarterly SemiAnnual Annual</td>
+      <td>Intervalo da recorrência. / Monthly / Bimonthly  / Quarterly  / SemiAnnual / Annual</td>
       <td>Número</td>
       <td>2</td>
       <td>Sim</td>
@@ -9365,7 +9365,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
       <td>Intervalo entre as recorrência.</td>
       <td>Texto</td>
       <td>10</td>
-      <td>MonthlyBimonthly Quarterly SemiAnnual Annual</td>
+      <td>/ Monthly / Bimonthly  / Quarterly  / SemiAnnual / Annual</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">AuthorizeNow</code></td>
