[17375e31357519c40dce62447cab71bc67d06fa6]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -8437,7 +8437,7 @@ HTTP Status 200
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Interval</code></td>
-      <td>Intervalo da recorrência. / Monthly / Bimonthly  / Quarterly  / SemiAnnual / Annual</td>
+      <td>Intervalo da recorrência.  Monthly = 1 <br /> Bimonthly = 2  <br /> Quarterly = 3 <br /> SemiAnnual = 6 <br /> Annual = 12 <br /></td>
       <td>Número</td>
       <td>2</td>
       <td>Sim</td>
