[583915d066a977154076e5632ff31a4f89e4e894]: Updated '_i18n/pt/_posts/api-ecommerce-cielo/2003-03-03-cielo-ecommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -2129,6 +2129,52 @@ Abaixo especificamos qualquer diferença existente:</p>
 
 <h2 id="cartão-de-débito">Cartão de Débito</h2>
 
+<p>Esse meio de pagamento é liberado automaticamente junto a afiliação de Cielo, podendo ser utilizado com as seguintes bandeiras e bancos:
+Bancos Suportados:</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>MASTERCARD</th>
+      <th>VISA</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Bradesco</td>
+      <td>Bradesco</td>
+    </tr>
+    <tr>
+      <td>Banco do Brasil</td>
+      <td>Banco do Brasil</td>
+    </tr>
+    <tr>
+      <td>Santander</td>
+      <td>Santander</td>
+    </tr>
+    <tr>
+      <td>Itaú</td>
+      <td>Itaú</td>
+    </tr>
+    <tr>
+      <td>CitiBank</td>
+      <td>CitiBank</td>
+    </tr>
+    <tr>
+      <td>BRB</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td>Caixa</td>
+      <td>N/A</td>
+    </tr>
+    <tr>
+      <td>BancooB</td>
+      <td>N/A</td>
+    </tr>
+  </tbody>
+</table>
+
 <h3 id="autenticação-débito">Autenticação Débito</h3>
 
 <p>O Cartão de débito por padrão exige que o portador seja direcionado para o ambiente Bancário, onde será avaliada a senha e dados informados pela loja. 
